--- a/lambda/package.json
+++ b/lambda/package.json
@@ -1,21 +1,15 @@
 {
-  "name": "lambda",
-  "version": "0.0.0",
-  "private": true,
+  "name": "lambda3",
+  "version": "1.0.0",
+  "description": "",
+  "main": "handler-api.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "aws-serverless-express": "^3.3.6",
-    "axios": "^0.19.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "serverless": "^1.46.1",
-    "serverless-offline": "^5.5.1"
+    "serverless": "^1.50.0",
+    "serverless-offline": "^5.10.1"
   }
 }
