--- a/lambda/package.json
+++ b/lambda/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "lambda3",
+  "name": "tickets-lambdas",
   "version": "1.0.0",
-  "description": "",
-  "main": "handler-api.js",
+  "description": "Lambda functions for a serverless ticketing example",
+  "main": "api-get-ticket.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Steven Alexander",
+  "license": "MIT",
   "devDependencies": {
     "serverless": "^1.50.0",
     "serverless-offline": "^5.10.1"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.516.0",
+    "uuid": "^3.3.3"
   }
 }
