--- a/lambda/package.json
+++ b/lambda/package.json
@@ -4,13 +4,14 @@
   "description": "Lambda functions for a serverless ticketing example",
   "main": "api-get-ticket.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard"
   },
   "author": "Steven Alexander",
   "license": "MIT",
   "devDependencies": {
     "serverless": "^1.50.0",
-    "serverless-offline": "^5.10.1"
+    "serverless-offline": "^5.10.1",
+    "standard": "^14.0.2"
   },
   "dependencies": {
     "aws-sdk": "^2.516.0",
