added web form to create a ticket

--- a/lambda/serverless.yml
+++ b/lambda/serverless.yml
@@ -20,12 +20,19 @@ provider:
 
 functions:
   # Web functions
-  Web:
-    handler: web.handler
+  WebGetTickets:
+    handler: web-get-tickets.handler
     events:
       - http:
           path: /
           method: get
+
+  WebCreateTicket:
+    handler: web-create-tickets.handler
+    events:
+      - http:
+          path: /
+          method: post
 
   # API functions
   GetTickets:
